--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,41 +1,38 @@
-name: Test
-
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
-
+name: test
+on: push
 jobs:
   test:
     runs-on: ubuntu-20.04
-    container: ryuichiueda/ubuntu22.04-ros2:latest
-
+    container: ryuichiueda/ubuntu20.04-ros2:latest
     steps:
+      - name: Checkout Code
+        uses: actions/checkout@v2
 
-      - uses: actions/checkout@v2
-
-      - name: Set up ROS 2 Humble
+      - name: Set up ROS 2 Foxy
         run: |
           sudo apt update
           sudo apt install -y curl gnupg2 lsb-release
           curl -sSL https://raw.githubusercontent.com/ros/rosdistro/master/ros.asc | sudo apt-key add -
           echo "deb http://packages.ros.org/ros2/ubuntu $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/ros2-latest.list
           sudo apt update
-          sudo apt install -y ros-humble-desktop python3-colcon-common-extensions
+          sudo apt install -y ros-foxy-desktop python3-colcon-common-extensions
 
-      - name: Build and Test
+      - name: Install Speedtest
+        run: |
+          sudo apt update
+          sudo apt install -y python3-pip
+          pip3 install speedtest-cli
+
+      - name: Build the Workspace
+        run: |
+          . /opt/ros/foxy/setup.bash
+          colcon build
+
+      - name: Test the Node
         shell: bash
         run: |
-          . /opt/ros/humble/setup.bash
-
-          colcon build --symlink-install
-
+          . /opt/ros/foxy/setup.bash
           . install/setup.bash
-
-          timeout 300 ros2 run internet_speed_display internet_speed_publisher > /tmp/internet_speed.log || true
-
-          grep 'Published:' /tmp/internet_speed.log || true
+          timeout 100 ros2 run internet_speed_display internet_speed_publisher > /tmp/internet_speed.log || true
+          grep 'Published:' /tmp/internet_speed.log || echo "No published data found in log."
 
