--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,6 @@
 name: test
 
-on: 
+on:
   push:
     branches:
       - main
@@ -8,30 +8,25 @@ on:
 jobs:
   test:
     runs-on: ubuntu-20.04
-    container: ros:foxy  # 公式の ROS 2 Foxy Docker イメージを使用
+    container: ros:foxy
 
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-      - name: Set up ROS 2 Foxy
+      - name: Install additional dependencies
         run: |
-          sudo apt update
-          sudo apt install -y curl gnupg2 lsb-release
-          curl -sSL https://raw.githubusercontent.com/ros/rosdistro/master/ros.asc | sudo apt-key add -
-          echo "deb http://packages.ros.org/ros2/ubuntu $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/ros2-latest.list
-          sudo apt update
-          sudo apt install -y ros-foxy-desktop python3-colcon-common-extensions
-
-      - name: Install Python dependencies
-        run: |
-          pip install -r requirements.txt
+          apt-get update && apt-get install -y \
+          python3-pip python3-colcon-common-extensions && \
+          pip3 install speedtest-cli && \
+          rm -rf /var/lib/apt/lists/*
 
       - name: Build and Test
         shell: bash
         run: |
-          . /opt/ros/foxy/setup.bash
-          colcon build 2> /dev/null || true
-          . install/setup.bash
-          timeout 100 ros2 run internet_speed_display internet_speed_node > /tmp/internet_speed.log || true
-          grep 'Published:' /tmp/internet_speed.log || true
+          source /opt/ros/foxy/setup.bash
+          colcon build
+          source install/setup.bash
+          timeout 30 ros2 run internet_speed_display internet_speed_node > /tmp/internet_speed.log || true
+          grep 'Published:' /tmp/internet_speed.log || echo "Test failed: No published messages found."
 
