--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Set up ROS 2 Humble
         run: |
           sudo apt update
-          sudo apt install -y curl gnupg2 lsb-release
+          sudo apt install -y curl gnupg2 lsb-release python3-pip
           curl -sSL https://raw.githubusercontent.com/ros/rosdistro/master/ros.asc | sudo apt-key add -
           echo "deb http://packages.ros.org/ros2/ubuntu $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/ros2-latest.list
           sudo apt update
@@ -24,7 +24,7 @@ jobs:
 
       - name: Install Python dependencies
         run: |
-          pip install -r requirements.txt
+          pip install speedtest-cli
 
       - name: Build and Test
         shell: bash
